--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,7 @@
     @apply text-xl;
   }
 }
+
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{
+  @apply bg-white;
+}
